Fix router to wrap entire app and encompass links, speeding up app.. Style header more(temp)

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,5 +1,6 @@
 .Home {
   font-family: var(--our-paired-font);
+  position:relative;
 }
 
 .home-banner-image {
