--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ Custom CSS Properties -
   --c3: #4C0827;
   --dark: #323232;
   --light: #cdcdcd;
+  --bg: white;
   --our-font-family: "Merriweather Sans";
   --our-paired-font: "Open Sans"
 }
