--- a/src/layout/Header.css
+++ b/src/layout/Header.css
@@ -9,6 +9,7 @@
   /** To center text on small device hamburger dropdown*/
   text-align: center;
   /** **/  
+  transition: top 0.2s ease-in-out;
 
 }
 
@@ -20,14 +21,28 @@
 
 .navbar-light .navbar-nav .nav-link {
   color: var(--c3);
-  border-bottom: 1px solid var(--c2);
+  margin-left: 15px;
+  padding-bottom: 5px;
+  background-color: transparent;
+  border-left: 2px solid var(--bg);
+ 
+}
+/**END: customize color of hamburger**/
+
+
+.navbar-light .navbar-collapse>ul>li>a:hover,
+.navbar-light .navbar-collapse>li>a:focus,
+.navbar-light .navbar-collapse>li>a.active {
+  color: var(--dark);
+  background-color: rgba(214, 73, 51, 0.25);
+  border-left: 2px solid var(--c2);
+  
 }
 
 .navbar-light .navbar-toggler-icon{
   /**TODO: the svg color here  needs to be changed if we change color scheme!**/
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(76, 8, 39, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
-/**END: customize color of hamburger**/
 
 
 /* .show.navbar-collapse{
